# diffusion-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_ddpm_mnist.py  train_ddpm_swissroll.py
config/: mnist.yaml  mnist_cond.yaml  mnist_uncond.yaml  swissroll.yaml
diffusion/: __init__.py  ddpm.py  layers.py  schedules.py  unet.py  utils.py
diffusion/data/: __init__.py  mnist.py  swissroll.py
diffusion/ddpm/: __init__.py  base.py  ddpm2d.py  ddpmtab.py  lr_schedule.py  noise_schedule.py  schedules.py
diffusion/layers/: __init__.py  attention.py  conv.py  dense.py  embed.py  utils.py
diffusion/models/: __init__.py  dense.py  unet.py
modules/: layers.py  unet.py
notebooks/: ddpm_intro.ipynb  ddpm_mnist.ipynb  ddpm_swissroll-Copy1.ipynb  ddpm_swissroll.ipynb  intro.ipynb  intro_1_ddpm.ipynb  intro_2_ddim.ipynb  intro_ddim.ipynb  mnist.ipynb  mnist_cond.ipynb  mnist_uncond.ipynb  swissroll.ipynb
scripts/: main.py  train_ddpm_mnist.py  train_ddpm_swissroll.py
src/diffusion/: __init__.py
src/diffusion/data/: __init__.py  mnist.py  swissroll.py
src/diffusion/ddpm/: __init__.py  base.py  ddpm2d.py  ddpmtab.py  lr_schedule.py  noise_schedule.py
src/diffusion/layers/: __init__.py  attention.py  conv.py  dense.py  embed.py  utils.py
src/diffusion/models/: __init__.py  dense.py  unet.py
